Sexy gradients and sexy title. So much sexy. wow.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,6 @@
-{{ partial "header" . }}
+{{ partial "head" . }}
 <body>
+  {{ partial "header" . }}
   <h1>{{ .Title }}</h1>
   <div>
     {{ .Content }}
