--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div>
     {{ with .Site.Title }}
-    <h1><a href="{{ $.Site.BaseURL }}">{{ . }}</a></h1>
+    <h1 class="title"><a href="{{ $.Site.BaseURL }}">{{ . }}<span class="blinking-cursor">█</span></a></h1>
     {{ end }}
   </div>
 </header>
