--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -4,7 +4,7 @@
     {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") }}
     {{ range $paginator.Pages }}
       <li >
-        <a href="{{ .Permalink }}" itemprop="url">
+        <a href="{{ .Permalink }}">
           <time datetime="">
           {{ .Date.Format "02 January 2006" }}
           </time>
